@@ -1,3 +1,12 @@
+2010-01-28  Joe Mason  <jmason@rim.com>
+
+        Reviewed by Adam Barth.
+
+        Limit login retries to 5
+        https://bugs.webkit.org/show_bug.cgi?id=34193
+
+        * Scripts/webkitpy/bugzilla.py:
+
 2010-01-27  Martin Robinson  <mrobinson@webkit.org>
 
         Adding myself to the committer list. No review necessary.
